# sleep-on-lan

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: build.yml  release.yml
src/: errors.rs  main.rs  server.rs
