[package]
name = "sleep-on-lan"
version = "0.4.0"
edition = "2024"
rust-version = "1.88"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.28"
env_logger = "0.11.8"
mac_address = "1.1.8"
clap = "4.5.50"
configparser = "3.1.0"
